# opensynch

./: CMakeLists.txt  CMakePresets.json  main.cpp
Module-MAC/agent/: CMakeLists.txt
Module-MAC/agent/include/: agent.h  collective.h  mathagent.h
Module-MAC/agent/src/: agent.cpp  collective.cpp  mathagent.cpp
Module-MAC/manager/: CMakeList.txt
Module-MAC/manager/include/: manager.h
Module-MAC/mas/: CMakeLists.txt
Module-MAC/mas/include/: integratormodel.h  linearmodel.h  masmodel.h
Module-MAC/mas/src/: integratormodel.cpp  linearmodel.cpp  masmodel.cpp
Module-MAC/network/: CMakeLists.txt
Module-MAC/network/include/: dynamicnetwork.h
Module-MAC/network/src/: dynamicnetwork.cpp
Module-MAC/protocol/: CMakeLists.txt
Module-MAC/protocol/include/: connection.h  protocol.h
Module-Math/fdm/: CMakeLists.txt
Module-Math/fdm/include/: eulerscheme.h  finitedifferencemethod.h  model.h  rungekuttascheme.h  verletscheme.h
Module-Math/fdm/src/: eulerscheme.cpp  finitedifferencemethod.cpp  model.cpp  rungekuttascheme.cpp  verletscheme.cpp
Module-Math/graph/: CMakeLists.txt
Module-Math/graph/include/: circlegraph.h  dynamicedge.h  edge.h  graph.h  graphgenerator.h  linegraph.h  staticedge.h  undirectedge.h  vertex.h  wattsstrogatzgraph.h
Module-Math/graph/src/: dynamicedge.cpp  edge.cpp  graph.cpp  graphgenerator.cpp  staticedge.cpp  undirectedge.cpp  vertex.cpp  wattsstrogatzgraph.cpp
Module-Math/time/: CMakeLists.txt
Module-Math/time/include/: timecounter.h
Module-Math/time/src/: timecounter.cpp
OpenPH/math/algebra/: CMakeLists.txt
OpenPH/math/algebra/include/: functional.h  scalar.h  strength.h
OpenPH/math/algebra/src/: scalar.cpp  strength.cpp
OpenPH/math/mathlist/: CMakeLists.txt
OpenPH/math/mathlist/include/: mathlist.h
OpenPH/math/mathlist/src/: mathlist.cpp
OpenPH/phys/physlist/: CMakeLists.txt
OpenPH/phys/physlist/include/: physlist.h
OpenPH/phys/physlist/src/: physlist.cpp
