 
cmake_minimum_required(VERSION 3.0.0)

# List internal includes needed.

#include_directories(${CMAKE_SOURCE_DIR})

#
# Define the OpenKuramoto Module
#

project(time)

include_directories(include)
set(SOURCE_LIB include/timecounter.h
               src/timecounter.cpp)
add_library(time  STATIC ${SOURCE_LIB})

